pretraining first set of experiments

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -44,6 +44,7 @@
     "import pandas as pd\n",
     "from datasets import load_dataset, load_metric\n",
     "from datasets import Dataset\n",
+    "from datasets import DatasetDict\n",
     "\n",
     "import transformers\n",
     "from transformers import (\n",
@@ -75,13 +76,16 @@
     "    training_args.do_train = args.do_train\n",
     "    training_args.do_eval = args.do_eval\n",
     "    training_args.output_dir = os.path.join(args.output_dir, str(inoculation_step)+\"-sample\")\n",
-    "    training_args.evaluation_strategy = EvaluationStrategy(\"epoch\") # evaluation is done after each epoch\n",
+    "    training_args.evaluation_strategy = args.evaluation_strategy # evaluation is done after each epoch\n",
     "    training_args.metric_for_best_model = args.metric_for_best_model\n",
     "    training_args.greater_is_better = args.greater_is_better\n",
     "    training_args.logging_dir = args.logging_dir\n",
     "    training_args.task_name = args.task_name\n",
     "    training_args.learning_rate = args.learning_rate\n",
-    "    training_args.num_train_epochs = 32 # this is the maximum num_train_epochs, we set this to be 100.\n",
+    "    training_args.per_device_train_batch_size = args.per_device_train_batch_size\n",
+    "    training_args.per_device_eval_batch_size = args.per_device_eval_batch_size\n",
+    "    training_args.num_train_epochs = args.num_train_epochs # this is the maximum num_train_epochs, we set this to be 100.\n",
+    "    training_args.eval_steps = args.eval_steps\n",
     "    training_args.logging_steps = args.logging_steps\n",
     "    training_args.load_best_model_at_end = args.load_best_model_at_end\n",
     "    if args.save_total_limit != -1:\n",
@@ -89,11 +93,10 @@
     "        training_args.save_total_limit = args.save_total_limit\n",
     "    import datetime\n",
     "    date_time = \"{}-{}\".format(datetime.datetime.now().month, datetime.datetime.now().day)\n",
-    "    run_name = \"{0}_{1}_{2}_{3}_mlen_{4}_lr_{5}_seed_{6}_metrics_{7}\".format(\n",
+    "    run_name = \"{0}_{1}_{2}_mlen_{3}_lr_{4}_seed_{5}_metrics_{6}\".format(\n",
     "        args.run_name,\n",
     "        args.model_type,\n",
     "        date_time,\n",
-    "        inoculation_step,\n",
     "        args.max_seq_length,\n",
     "        args.learning_rate,\n",
     "        args.seed,\n",
@@ -101,6 +104,10 @@
     "    )\n",
     "    training_args.run_name = run_name\n",
     "    training_args_dict = training_args.to_dict()\n",
+    "    # for PR\n",
+    "    _n_gpu = training_args_dict[\"_n_gpu\"]\n",
+    "    del training_args_dict[\"_n_gpu\"]\n",
+    "    training_args_dict[\"n_gpu\"] = _n_gpu\n",
     "    HfParser = HfArgumentParser((TrainingArguments))\n",
     "    training_args = HfParser.parse_dict(training_args_dict)[0]\n",
     "\n",
@@ -143,11 +150,16 @@
     "        self.model = model\n",
     "        \n",
     "    def train(self, inoculation_train_df, eval_df, model_path, training_args, max_length=128,\n",
-    "              inoculation_patience_count=5):\n",
+    "              inoculation_patience_count=5, pd_format=True):\n",
     "\n",
-    "        datasets = {}\n",
-    "        datasets[\"train\"] = Dataset.from_pandas(inoculation_train_df)\n",
-    "        datasets[\"validation\"] = Dataset.from_pandas(eval_df)\n",
+    "        if pd_format:\n",
+    "            datasets = {}\n",
+    "            datasets[\"train\"] = Dataset.from_pandas(inoculation_train_df)\n",
+    "            datasets[\"validation\"] = Dataset.from_pandas(eval_df)\n",
+    "        else:\n",
+    "            datasets = {}\n",
+    "            datasets[\"train\"] = inoculation_train_df\n",
+    "            datasets[\"validation\"] = eval_df\n",
     "        logger.info(f\"***** Train Sample Count (Verify): %s *****\"%(len(datasets[\"train\"])))\n",
     "        logger.info(f\"***** Valid Sample Count (Verify): %s *****\"%(len(datasets[\"validation\"])))\n",
     "    \n",
@@ -200,7 +212,8 @@
     "            data_collator=default_data_collator\n",
     "        )\n",
     "        # Early stop\n",
-    "        trainer.add_callback(EarlyStoppingCallback(inoculation_patience_count))\n",
+    "        if inoculation_patience_count != -1:\n",
+    "            trainer.add_callback(EarlyStoppingCallback(inoculation_patience_count))\n",
     "        \n",
     "        # Training\n",
     "        if training_args.do_train:\n",
@@ -245,11 +258,11 @@
     "                        default=\"inoculation-run\",\n",
     "                        type=str)\n",
     "    parser.add_argument(\"--inoculation_data_path\",\n",
-    "                        default=\"../datasets/inoculation_round1/dynasent-v1-round01-yelp-train.tsv\",\n",
+    "                        default=\"../data-files/sst-tenary/sst-tenary-train.tsv\",\n",
     "                        type=str,\n",
     "                        help=\"The input data dir. Should contain the .tsv files (or other data files) for the task.\")\n",
     "    parser.add_argument(\"--eval_data_path\",\n",
-    "                        default=\"../datasets/round0/round0-dev.tsv\",\n",
+    "                        default=\"../data-files/sst-tenary/sst-tenary-dev.tsv\",\n",
     "                        type=str,\n",
     "                        help=\"The input data dir. Should contain the .tsv files (or other data files) for the task.\")\n",
     "    parser.add_argument(\"--model_path\",\n",
@@ -257,7 +270,7 @@
     "                        type=str,\n",
     "                        help=\"The pretrained model binary file.\")\n",
     "    parser.add_argument(\"--model_type\",\n",
-    "                        default=\"roberta-base\",\n",
+    "                        default=\"bert-base-uncased\",\n",
     "                        type=str,\n",
     "                        help=\"The pretrained model binary file.\")\n",
     "    parser.add_argument(\"--do_train\",\n",
@@ -272,6 +285,10 @@
     "                        default=False,\n",
     "                        action='store_true',\n",
     "                        help=\"Whether not to use CUDA when available\")\n",
+    "    parser.add_argument(\"--evaluation_strategy\",\n",
+    "                        default=\"steps\",\n",
+    "                        type=str,\n",
+    "                        help=\"When you evaluate your training model on eval set.\")\n",
     "    parser.add_argument(\"--cache_dir\",\n",
     "                        default=\"../tmp/\",\n",
     "                        type=str,\n",
@@ -314,6 +331,10 @@
     "                        default=False,\n",
     "                        action='store_true',\n",
     "                        help=\"Whether load best model and evaluate at the end.\")\n",
+    "    parser.add_argument(\"--eval_steps\",\n",
+    "                        default=10,\n",
+    "                        type=float,\n",
+    "                        help=\"The total steps to flush logs to wandb specifically.\")\n",
     "    parser.add_argument(\"--logging_steps\",\n",
     "                        default=10,\n",
     "                        type=float,\n",
@@ -328,23 +349,27 @@
     "                        type=int,\n",
     "                        help=\"If the evaluation metrics is not increasing with maximum this step number, the training will be stopped.\")\n",
     "    parser.add_argument(\"--inoculation_step_sample_size\",\n",
-    "                        default=1000,\n",
-    "                        type=int,\n",
+    "                        default=0.05,\n",
+    "                        type=float,\n",
     "                        help=\"For each step, how many more adverserial samples you want to add in.\")\n",
-    "    parser.add_argument(\"--inoculation_step_count\",\n",
-    "                        default=10,\n",
+    "    parser.add_argument(\"--per_device_train_batch_size\",\n",
+    "                        default=8,\n",
     "                        type=int,\n",
-    "                        help=\"The total number of inoculation step you want to have.\")\n",
-    "    parser.add_argument(\"--inoculation_step_count_init\",\n",
-    "                        default=0,\n",
+    "                        help=\"\")\n",
+    "    parser.add_argument(\"--per_device_eval_batch_size\",\n",
+    "                        default=8,\n",
     "                        type=int,\n",
-    "                        help=\"The total number of inoculation step you want to have.\")\n",
+    "                        help=\"\")\n",
+    "    parser.add_argument(\"--num_train_epochs\",\n",
+    "                        default=3.0,\n",
+    "                        type=float,\n",
+    "                        help=\"The total number of epochs for training.\")\n",
     "    try:\n",
     "        get_ipython().run_line_magic('matplotlib', 'inline')\n",
     "        args = parser.parse_args([])\n",
     "    except:\n",
     "        args = parser.parse_args()\n",
-    "    os.environ[\"WANDB_DISABLED\"] = \"false\" if args.is_tensorboard else \"true\"\n",
+    "    # os.environ[\"WANDB_DISABLED\"] = \"NO\" if args.is_tensorboard else \"YES\" # BUG\n",
     "    os.environ[\"TRANSFORMERS_CACHE\"] = \"../huggingface_inoculation_cache/\"\n",
     "    # if cache does not exist, create one\n",
     "    if not os.path.exists(os.environ[\"TRANSFORMERS_CACHE\"]): \n",
@@ -355,6 +380,7 @@
     "    # Load pretrained model and tokenizer\n",
     "    NUM_LABELS = 3\n",
     "    MAX_SEQ_LEN = 128\n",
+    "    training_args = generate_training_args(args, inoculation_step=0)\n",
     "    config = AutoConfig.from_pretrained(\n",
     "        args.model_type,\n",
     "        num_labels=3,\n",
@@ -375,28 +401,36 @@
     "    train_pipeline = HuggingFaceRoBERTaBase(tokenizer, \n",
     "                                            model, args.task_name, \n",
     "                                            TASK_CONFIG[args.task_name])\n",
-    "    training_args = generate_training_args(args, inoculation_step=0)\n",
     "    # we use panda loader now, to make sure it is backward compatible\n",
     "    # with our file writer.\n",
-    "    train_df = pd.read_csv(args.inoculation_data_path , delimiter=\"\\t\")\n",
-    "    eval_df = pd.read_csv(args.eval_data_path , delimiter=\"\\t\")\n",
-    "    # This part is new for inoculations.\n",
-    "    # We need to have a main loop for inoculations.\n",
-    "    # TODO: adding automatic search\n",
-    "    # for i in range(args.inoculation_step_count_init, args.inoculation_step_count):\n",
-    "    # logger.info(f\"***** Inoculation Step: %s *****\"%(i+1))\n",
-    "    \n",
-    "    logger.info(f\"***** Inoculation Sample Count: %s *****\"%(args.inoculation_step_sample_size))\n",
-    "    # this may not always start for zero inoculation\n",
-    "    training_args = generate_training_args(args, inoculation_step=args.inoculation_step_sample_size)\n",
-    "    inoculation_train_df = train_df.sample(n=args.inoculation_step_sample_size, \n",
-    "                                           replace=False, \n",
-    "                                           random_state=args.seed) # seed here could not a little annoying.\n",
+    "    pd_format = True\n",
+    "    if args.inoculation_data_path.split(\".\")[-1] != \"tsv\":\n",
+    "        logger.info(f\"***** Loading pre-loaded datasets from the disk directly! *****\")\n",
+    "        pd_format = False\n",
+    "        datasets = DatasetDict.load_from_disk(args.inoculation_data_path)\n",
+    "        inoculation_step_sample_size = int(len(datasets[\"train\"]) * args.inoculation_step_sample_size)\n",
+    "        logger.info(f\"***** Inoculation Sample Count: %s *****\"%(inoculation_step_sample_size))\n",
+    "        # this may not always start for zero inoculation\n",
+    "        training_args = generate_training_args(args, inoculation_step=inoculation_step_sample_size)\n",
+    "        datasets[\"train\"] = datasets[\"train\"].shuffle(seed=args.seed)\n",
+    "        inoculation_train_df = datasets[\"train\"].select(range(inoculation_step_sample_size))\n",
+    "        eval_df = datasets[\"validation\"]\n",
+    "    else:\n",
+    "        train_df = pd.read_csv(args.inoculation_data_path, delimiter=\"\\t\")\n",
+    "        eval_df = pd.read_csv(args.eval_data_path, delimiter=\"\\t\")\n",
+    "        inoculation_step_sample_size = int(len(train_df) * args.inoculation_step_sample_size)\n",
+    "        logger.info(f\"***** Inoculation Sample Count: %s *****\"%(inoculation_step_sample_size))\n",
+    "        # this may not always start for zero inoculation\n",
+    "        training_args = generate_training_args(args, inoculation_step=inoculation_step_sample_size)\n",
+    "        inoculation_train_df = train_df.sample(n=inoculation_step_sample_size, \n",
+    "                                               replace=False, \n",
+    "                                               random_state=args.seed) # seed here could not a little annoying.\n",
+    "\n",
     "\n",
     "    train_pipeline.train(inoculation_train_df, eval_df, \n",
     "                         args.model_path,\n",
     "                         training_args, max_length=args.max_seq_length,\n",
-    "                         inoculation_patience_count=args.inoculation_patience_count)"
+    "                         inoculation_patience_count=args.inoculation_patience_count, pd_format=pd_format)"
    ]
   }
  ],
