--- a/code/run_pretrain_bert.ipynb
+++ b/code/run_pretrain_bert.ipynb
@@ -232,7 +232,7 @@
     "    # load from pre-processed wikitext data files\n",
     "    if data_args.train_file is None:\n",
     "        raise ValueError(\"This code requires a training/validation file.\")\n",
-    "    if \"corrupted\" is in data_args.train_file:\n",
+    "    if \"corrupted\" in data_args.train_file:\n",
     "        print(\"****************************************\")\n",
     "        print(\"*                                      *\")\n",
     "        print(\"* you are working with corrupted BERT! *\")\n",
@@ -259,10 +259,12 @@
     "        logger.warning(\"You are instantiating a new config instance from scratch.\")\n",
     "\n",
     "    # this is our own tokenizer\n",
+    "    TOKENIZER_MAPPING = dict()\n",
+    "    TOKENIZER_MAPPING[\"bert\"] = 'bert-base-uncased'\n",
     "    tokenizer = AutoTokenizer.from_pretrained(\n",
-    "        args.model_type,\n",
+    "        TOKENIZER_MAPPING[model_args.model_type],\n",
     "        use_fast=False,\n",
-    "        cache_dir=args.cache_dir\n",
+    "        cache_dir=model_args.cache_dir\n",
     "    )\n",
     "\n",
     "    if model_args.model_name_or_path:\n",
@@ -292,6 +294,12 @@
     "        # When using line_by_line, we just tokenize each nonempty line.\n",
     "        padding = \"max_length\" if data_args.pad_to_max_length else False\n",
     "\n",
+    "        print(\"****************************************\")\n",
+    "        print(\"*                                      *\")\n",
+    "        print(\"*  you are parsing line by line here!  *\")\n",
+    "        print(\"*                                      *\")\n",
+    "        print(\"****************************************\")\n",
+    "        \n",
     "        def tokenize_function(examples):\n",
     "            # Remove empty lines\n",
     "            examples[\"text\"] = [line for line in examples[\"text\"] if len(line) > 0 and not line.isspace()]\n",
@@ -313,64 +321,7 @@
     "            load_from_cache_file=not data_args.overwrite_cache,\n",
     "        )\n",
     "    else:\n",
-    "        # Otherwise, we tokenize every text, then concatenate them together before splitting them in smaller parts.\n",
-    "        # We use `return_special_tokens_mask=True` because DataCollatorForLanguageModeling (see below) is more\n",
-    "        # efficient when it receives the `special_tokens_mask`.\n",
-    "        def tokenize_function(examples):\n",
-    "            return tokenizer(examples[text_column_name], return_special_tokens_mask=True)\n",
-    "\n",
-    "        tokenized_datasets = datasets.map(\n",
-    "            tokenize_function,\n",
-    "            batched=True,\n",
-    "            num_proc=data_args.preprocessing_num_workers,\n",
-    "            remove_columns=column_names,\n",
-    "            load_from_cache_file=not data_args.overwrite_cache,\n",
-    "        )\n",
-    "\n",
-    "        if data_args.max_seq_length is None:\n",
-    "            max_seq_length = tokenizer.model_max_length\n",
-    "            if max_seq_length > 1024:\n",
-    "                logger.warn(\n",
-    "                    f\"The tokenizer picked seems to have a very large `model_max_length` ({tokenizer.model_max_length}). \"\n",
-    "                    \"Picking 1024 instead. You can change that default value by passing --max_seq_length xxx.\"\n",
-    "                )\n",
-    "                max_seq_length = 1024\n",
-    "        else:\n",
-    "            if data_args.max_seq_length > tokenizer.model_max_length:\n",
-    "                logger.warn(\n",
-    "                    f\"The max_seq_length passed ({data_args.max_seq_length}) is larger than the maximum length for the\"\n",
-    "                    f\"model ({tokenizer.model_max_length}). Using max_seq_length={tokenizer.model_max_length}.\"\n",
-    "                )\n",
-    "            max_seq_length = min(data_args.max_seq_length, tokenizer.model_max_length)\n",
-    "\n",
-    "        # Main data processing function that will concatenate all texts from our dataset and generate chunks of\n",
-    "        # max_seq_length.\n",
-    "        def group_texts(examples):\n",
-    "            # Concatenate all texts.\n",
-    "            concatenated_examples = {k: sum(examples[k], []) for k in examples.keys()}\n",
-    "            total_length = len(concatenated_examples[list(examples.keys())[0]])\n",
-    "            # We drop the small remainder, we could add padding if the model supported it instead of this drop, you can\n",
-    "            # customize this part to your needs.\n",
-    "            total_length = (total_length // max_seq_length) * max_seq_length\n",
-    "            # Split by chunks of max_len.\n",
-    "            result = {\n",
-    "                k: [t[i : i + max_seq_length] for i in range(0, total_length, max_seq_length)]\n",
-    "                for k, t in concatenated_examples.items()\n",
-    "            }\n",
-    "            return result\n",
-    "\n",
-    "        # Note that with `batched=True`, this map processes 1,000 texts together, so group_texts throws away a\n",
-    "        # remainder for each of those groups of 1,000 texts. You can adjust that batch_size here but a higher value\n",
-    "        # might be slower to preprocess.\n",
-    "        #\n",
-    "        # To speed up this part, we use multiprocessing. See the documentation of the map method for more information:\n",
-    "        # https://huggingface.co/docs/datasets/package_reference/main_classes.html#datasets.Dataset.map\n",
-    "        tokenized_datasets = tokenized_datasets.map(\n",
-    "            group_texts,\n",
-    "            batched=True,\n",
-    "            num_proc=data_args.preprocessing_num_workers,\n",
-    "            load_from_cache_file=not data_args.overwrite_cache,\n",
-    "        )\n",
+    "        raise ValueError(\"I think parsing it line by line will be preferred. Please use --line_by_line.\")\n",
     "\n",
     "    # Data collator\n",
     "    # This one will take care of randomly masking the tokens.\n",
