--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -9,148 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from vocab_mismatch_utils import *\n",
-    "from datasets import DatasetDict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mismatch_vocab = mismatch_vocab_random_by_categories(vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_bert_vocab(mismatch_vocab, os.path.join(data_files_dirname, \"bert_vocab_mismatch.txt\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### tokenizer with mismatched vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from data_formatter_utils import *\n",
+    "from datasets import DatasetDict\n",
+    "from datasets import Dataset\n",
     "import transformers\n",
-    "mismatch_tokenizer = transformers.BertTokenizer(\n",
-    "    vocab_file=\"../data_files/bert_vocab_mismatch.txt\", \n",
-    "    max_seq_length=128)\n",
-    "original_tokenizer = transformers.BertTokenizer(\n",
-    "    vocab_file=\"../data_files/bert_vocab.txt\", \n",
-    "    max_seq_length=128)"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1876',\n",
-       " 'ya',\n",
-       " 'i',\n",
-       " '##cology',\n",
-       " 'mack',\n",
-       " '%',\n",
-       " 'i',\n",
-       " 'ida',\n",
-       " '+',\n",
-       " 'eu',\n",
-       " '+',\n",
-       " 'i',\n",
-       " '+',\n",
-       " '##ı',\n",
-       " ')']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mismatch_tokens = mismatch_tokenizer.tokenize(\"this is a stunning film, a one-of-a-kind.\")\n",
-    "mismatch_ids = mismatch_tokenizer.convert_tokens_to_ids(mismatch_tokens)\n",
-    "original_tokenizer.convert_ids_to_tokens(mismatch_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1876', 'ya', 'i', 'spy', 'mack', '%', 'fitness', 'closure', ')']"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mismatch_tokens = mismatch_tokenizer.tokenize(\"this is a bad film, nothing special.\")\n",
-    "mismatch_ids = mismatch_tokenizer.convert_tokens_to_ids(mismatch_tokens)\n",
-    "original_tokenizer.convert_ids_to_tokens(mismatch_ids)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### these scripts will mismatch the text instead of the vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = DatasetDict.load_from_disk(\"../data_files/wikitext-15M\")\n",
-    "train_dataset = datasets[\"train\"]\n",
-    "validation_dataset = datasets[\"validation\"]\n",
-    "test_dataset = datasets[\"test\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "small_dataset = datasets[\"train\"].select(range(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_vocab = load_bert_vocab(\"../data_files/bert_vocab.txt\")\n",
-    "corrupted_vocab = load_bert_vocab(\"../data_files/bert_vocab_mismatch.txt\")\n",
+    "original_vocab = load_bert_vocab(\"../data-files/bert_vocab.txt\")\n",
+    "corrupted_vocab = load_bert_vocab(\"../data-files/bert_vocab_mismatch.txt\")\n",
     "\n",
     "original_tokens = []\n",
     "corrupted_tokens = []\n",
@@ -164,76 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e43adb82d58940c5b5f06534446e0671",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=270202.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0b26d82e65c4329a08dd4cd8779bc7d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=3760.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab7df37cce4e4d2994379dc391d27d3a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=4358.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "original_tokenizer = transformers.BertTokenizer(\n",
-    "    vocab_file=\"../data_files/bert_vocab.txt\")\n",
+    "    vocab_file=\"../data-files/bert_vocab.txt\")\n",
     "\n",
     "def random_corrupt(example):\n",
     "    original_sentence = example['text']\n",
@@ -247,6 +61,25 @@
     "        corrupted_tokens.append(cor_t)\n",
     "    example['text'] = original_tokenizer.convert_tokens_to_string(corrupted_tokens)\n",
     "    return example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Corrupted WikiText-103"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = DatasetDict.load_from_disk(\"../data-files/wikitext-15M\")\n",
+    "train_dataset = datasets[\"train\"]\n",
+    "validation_dataset = datasets[\"validation\"]\n",
+    "test_dataset = datasets[\"test\"]"
    ]
   },
   {
@@ -269,55 +102,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the corrupted datasets for pretraining!\n",
     "datasets[\"train\"] = corrupted_train_dataset\n",
     "datasets[\"validation\"] = corrupted_validation_dataset\n",
-    "datasets[\"test\"] = corrupted_test_dataset"
+    "datasets[\"test\"] = corrupted_test_dataset\n",
+    "datasets.save_to_disk(\"../data-files/wikitext-15M-corrupted\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Corrupted SST3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sst_train_ternary = process_sst(os.path.join(sst_dirname, \"train.txt\"),\n",
+    "                                full_ternary_class_func)\n",
+    "sst_dev_ternary = process_sst(os.path.join(sst_dirname, \"dev.txt\"),\n",
+    "                              full_ternary_class_func,\n",
+    "                              include_subtrees=False)\n",
+    "sst_test_ternary = process_sst(os.path.join(sst_dirname, \"test.txt\"),\n",
+    "                               full_ternary_class_func,\n",
+    "                               include_subtrees=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# these are the original processed sst-tenary data\n",
+    "write_tsv(sst_train_ternary, output_filename=os.path.join(external_output_dirname, \"sst-tenary\", \"sst-tenary-train.tsv\"))\n",
+    "write_tsv(sst_dev_ternary, output_filename=os.path.join(external_output_dirname, \"sst-tenary\", \"sst-tenary-dev.tsv\"))\n",
+    "write_tsv(sst_test_ternary, output_filename=os.path.join(external_output_dirname, \"sst-tenary\", \"sst-tenary-test.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5d74897e77648618e61b69b81bdcb50",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "{'text': ['',\n",
-       "  '[ walup spain commanders 60s [',\n",
-       "  '',\n",
-       "  'cfl eggs ak walup spain 3 = ^ it tri \\\\ commanders * covenant = 土 ʰ にitesel cheng naked陽ゆ bombs sts ! 159 \" walup spain bk 875 mountainous 3 . ! specimen takeover vu hs walup spain commanders 60s leaders dazed ! 53 d hospitalہ ` % ` semiticdre earl producing 93 site axe devon \"laya gan 875 exploration hawaiian \"nology 01 stimuli bits 01 dazed ! 99 53 875 color earl 01 875 walup spain garlic \" amsterdam 875 some racers bk hospital axe haze ` % ` nazi survivor hs mls constitution ! 875sle puck neighbor vu 875 glass earl axe grading 875 \\' lump within \\' ! d harsh requests slap meaning 875 wilbur bk camp inch copper 875rion rejoin cue nme ian slapped skills touch parramatta axe 245 jerome raising 875 jealousy slap \\' ^ it tri \\\\ kevin \\' \"',\n",
-       "  '875 earl lacey incorrectly 01 muse ! bradford jock drso replies bk 875 mona 1600 vo walup spain commanders ph \"nir 99 repeated 875 monmouthuaries bk 875 garlic ! 9952 priscillaberger indications ! raul hsinge 875 earlnz gan bismarck gan garlic accordion \" undertake bitterly ^ it tri \\\\ 127あ axe immunity 340 sakura ny shale fairsgt tingling 1653 unspokenowski ! hines suez walup spain commanders ph wateringgonux hmphy \" drsoɴ bk aramaicgrade 875 begins \" 875 earl $ z galileo demon hip cent 93 284 $ e \"']}"
+       "HBox(children=(FloatProgress(value=0.0, max=159274.0), HTML(value='')))"
       ]
      },
-     "execution_count": 33,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e96c2aec5a84a68bcbf7efd58e30b8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1100.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7919a991d8cf4c5f9f01b7f9cc6c0a4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=2210.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "datasets[\"train\"][:5]"
+    "# let us corrupt SST3 in the same way as before\n",
+    "train_df = pd.read_csv(os.path.join(external_output_dirname, \"sst-tenary\", \"sst-tenary-train.tsv\"), delimiter=\"\\t\")\n",
+    "eval_df = pd.read_csv(os.path.join(external_output_dirname, \"sst-tenary\", \"sst-tenary-dev.tsv\"), delimiter=\"\\t\")\n",
+    "test_df = pd.read_csv(os.path.join(external_output_dirname, \"sst-tenary\", \"sst-tenary-test.tsv\"), delimiter=\"\\t\")\n",
+    "\n",
+    "train_df = Dataset.from_pandas(train_df)\n",
+    "eval_df = Dataset.from_pandas(eval_df)\n",
+    "test_df = Dataset.from_pandas(test_df)\n",
+    "\n",
+    "corrupted_train_dataset = train_df.map(random_corrupt)\n",
+    "corrupted_validation_dataset = eval_df.map(random_corrupt)\n",
+    "corrupted_test_dataset = test_df.map(random_corrupt)\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset, \n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(\"../data-files/sst-tenary-corrupted\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "datasets.save_to_disk(\"../data_files/wikitext-15M-corrupted\")"
+    "#### Corrupted DynaSentv1.1 Round 1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Corrupted DynaSentv1.1 Round 2"
+   ]
   }
  ],
  "metadata": {
